frontend/src/css/modal.css
/* ==========================================================================
   МОДАЛЬНЫЕ ОКНА
   ========================================================================== */
.modal__background {
  position: fixed;
  z-index: -10;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  transition: background-color 0.3s;
}

.modal__content {
  position: absolute;
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
  background-color: white;
  top: calc(50% - 175px);
  left: calc(50% - 250px);
  width: 500px;
  border-radius: 5px;
  box-shadow: 0 3px 5px 2px rgba(0, 0, 0, 0.3);
  transition: transform 0.3s ease-out;
  transform: translateY(-100vh);
  z-index: 20;
}

.modal__header {
  text-align: center;
  background-color: #dee2e1;
  padding: 15px 10px;
  font-size: 18px;
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
}

.modal__body {
  padding: 20px;
}

.modal__footer {
  display: flex;
  padding: 0 10px 20px 10px;
}

.modal__close,
.modal__ok {
  box-sizing: border-box;
  text-align: center;
  width: 100px;
  margin-left: auto;
  border-radius: 20px;
  padding: 10px 20px;
  cursor: pointer;
  border: 1px solid #ccc;
  outline: none;
  transition: background-color 0.2s, border-color 0.2s;
}

.modal__close {
  border-color: #f6c5dc;
  background-color: #f6c5dc;
}

.modal__ok {
  margin-left: 10px;
  border-color: #58bf97;
  background-color: #58bf97;
}

.modal__form.active .modal__background,
.modal__delete.active .modal__background {
  z-index: 10;
  background-color: rgba(0, 0, 0, 0.7);
}

.modal__form.active .modal__content,
.modal__delete.active .modal__content {
  transform: translateY(0);
}

.modal-text {
  text-align: center;
  font-size: 32px;
}

